<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">myPlan</string>
    <string name="app_version">1.3.10</string>

    <string name="main_comparePlans">Ver planes</string>
    <string name="main_viewstats">Estadísticas</string>
    <string name="main_settings">Ajustes</string>
    <string name="main_accept_button">Aceptar</string>
    <string name="main_support">Apoya el desarrollo de myPlan</string>
    <string name="main_toast_settings">Debes configurar operadora y plan</string>

    <string name="plan_month_fee">Cuota mensual</string>
    <string name="plan_minimum_month_fee">Diferencia consumo mínimo</string>
    <string name="plan_billingperiod">Periodo de facturación:</string>
    
    <string name="settings_myplan">Ajustes de mi plan</string>
    <string name="settings_billingday">Día inicio facturación</string>
    <string name="settings_operator">Operadora</string>
    <string name="settings_operator_notselected">(seleccione una compañía)</string>
    <string name="settings_planname">Mi plan actual</string>
    <string name="settings_planname_notselected">(seleccione un plan)</string>
    <string name="settings_plan_settings">Ajustes del plan</string>
    <string name="settings_general">Ajustes generales</string>
    <string name="settings_plansorting">Ordenación de planes</string>
    <string name="settings_plansorting_price">Ordenar por precio</string>
    <string name="settings_plansorting_operator_price">Ordenar por compañía y precio</string>
    <string name="settings_count_sms">Contabilizar SMS</string>
    <string name="settings_vat">Importes con IVA</string>
    <string name="settings_trap_after_call">Importe al finalizar</string>
    <string name="settings_trap_after_call_summary">Mostrar importe al terminar llamada</string>
    <string name="settings_crash_report_disabled">Deshabilitar el envio de errores</string>
    <string name="settings_crash_report_disabled_summary">No se envían datos personales</string>
    <string name="settings_show_plans">Mostrar planes</string>
    <string name="settings_show_plans_detail">Se mostrarán los planes seleccionados</string>

    <string name="stats_missed_calls">Llamadas perdidas</string>
    <string name="stats_answered_calls">Llamadas contestadas</string>
    <string name="stats_inbound_calls">Llamadas entrantes</string>
    <string name="stats_outbound_calls">Llamadas salientes</string>
    <string name="stats_inbound_seconds">Duración llamadas entrantes</string>
    <string name="stats_outbound_seconds">Duración llamadas salientes</string>
    <string name="stats_total_calls">Total de llamadas</string>
    <string name="stats_shortest_call">Llamada más corta</string>
    <string name="stats_longest_call">Llamada más larga</string>
    <string name="stats_average_call">Tiempo medio llamada</string>
    <string name="stats_menu_general_data">Datos generales</string>
    <string name="stats_menu_top_caller_calls">Números más llamados (cantidad)</string>
    <string name="stats_menu_top_caller_duration">Números más llamados (tiempo)</string>

    <string name="disclaimer">Condiciones de uso</string>
    <string name="disclaimer_text">
        \n\nLos cálculos de tarifas en esta aplicación se realizan conforme a la
        información obtenida en la web de cada operador.
        \n\nEl creador de esta aplicación no se hace responsable de la posible
        inexactitud de los datos mostrados ni del uso que de ellos se pueda hacer.
        \n\nEl acceso a internet de esta aplicación es exclusivamente para la
        obtención de banners publicitarios y envío de informes de error, no enviándose
        información alguna acerca del usuario y/o las llamadas realizadas.
        \n\nEl uso de esta aplicación implica la aceptación expresa de lo
        anteriormente expuesto.
    </string>
    
    <string name="aftercall_lastcallbill">Importe última llamada</string>
    <string name="aftercall_totalbill">Importe total acumulado</string>
    <string name="aftercall_operator">Operadora</string>
    <string name="aftercall_planname">Plan contratado</string>
    
    <string name="menu_about">Acerca de</string>
    <string name="menu_previous_period">Periodo Anterior</string>
    <string name="menu_following_period">Periodo Siguiente</string>
    <string name="menu_planurl">Web del plan</string>

    <string name="es.orange.ardilla9.hour">Hora ini. franja reducida</string>

    <!--
    <string name="crash_notif_ticker_text">Error inesperado, por favor envía el informe...</string>
    <string name="crash_notif_title">¡Vaya!, la aplicación se ha parado...</string>
    <string name="crash_notif_text">Por favor, pincha aquí para ayudarme a solucionarlo.</string>
    <string name="crash_dialog_text">
        Parece que no soy tan buen programador...y la aplicación se ha parado. ¡Ayúdame a solucionarlo
        enviando un informe de error!. No se enviarán datos personales.
    </string>
    <string name="crash_dialog_comment_prompt">Quizá quieras añadir algún comentario al informe:</string>
    <string name="crash_dialog_ok_toast">¡Gracias por ayudarme a mejorar la aplicación!</string>
    -->    
</resources>
